--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,3 +10,16 @@
     <script defer src="/js/bootstrap.min.js" charset="utf-8"></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand">
+      <a class="navbar-brand" href="#">Fotorol</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
