--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,14 +22,23 @@
       </form>
     </div>
 
+    <% for (let post of posts) { %>
+      <div class="col-sm-8">
+        <div class="card">
+          <div class="card-header">
+            <strong><%= post.username %></strong>
+          </div>
+          <img class="card-img" src="https://i.imgur.com/9qBZMdF.jpg">
+          <div class="card-body">
+            <p class="card-text">
+              <%= post.content %>
+            </p>
+          </div>
+        </div>
+      </div>
+    <% } %>
   </section>
 
 </div>
-
-<% if (content) { %>
-  <h2>You were thinking:</h2>
-  <!-- 👇 that tag with the = escapes all the html characters inside -->
-  <p><%= content %></p>
-<% } %>
 
 <%- include('./partials/footer') %>
