--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,20 @@
   <section class="row justify-content-center">
 
     <div class="col-sm-8">
-      <form class="d-flex flex-column" action='/' method='POST'>
+      <form
+        class="d-flex flex-column"
+        action='/'
+        enctype="multipart/form-data"
+        method='POST'
+      >
+        <div class="form-group">
+          <input
+            class="form-control"
+            name="photo"
+            type="file"
+          />
+        </div>
+
         <div class="form-group">
           <textarea
             class="form-control"
