Store photo url in db and display it index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
           <div class="card-header">
             <strong><%= post.username %></strong>
           </div>
-          <img class="card-img" src="https://i.imgur.com/9qBZMdF.jpg">
+          <img class="card-img" src="<%= post.photo_path %>">
           <div class="card-body">
             <p class="card-text">
               <%= post.content %>
