--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 
-  <section class="row justify-content-center">
+  <section class="fotorol-list row justify-content-center">
 
     <div class="col-sm-8">
       <form
@@ -11,6 +11,15 @@
         enctype="multipart/form-data"
         method='POST'
       >
+        <div class="form-group">
+          <input
+            class="form-control"
+            name="username"
+            placeholder="Username"
+            type="text"
+          />
+        </div>
+
         <div class="form-group">
           <input
             class="form-control"
