Refactor app to follow RESTful convention (and restructure directories)

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('../partials/header') %>
 
 <div class="container-fluid">
 
@@ -7,7 +7,7 @@
     <div class="col-sm-8">
       <form
         class="d-flex flex-column"
-        action='/'
+        action="/posts"
         enctype="multipart/form-data"
         method='POST'
       >
@@ -63,4 +63,4 @@
 
 </div>
 
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
