--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,8 +15,11 @@
       <a class="navbar-brand" href="#">Fotorol</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/posts">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
