--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,13 @@
 .fotorol-list > *:not(:last-child) {
   margin-bottom: 1rem;
 }
+
+.b-image {
+  border-radius: 5px;
+  margin-bottom: 5px;
+  width: 100%;
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
