--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -6,9 +6,10 @@
 
       <div class="col-sm-8">
         <div class="card">
-          <div class="card-header d-flex">
+          <div class="card-header d-flex align-items-center">
             <strong><%= post.username %></strong>
-            <form class="ml-auto" action="/posts/<%= post.id %>?_method=DELETE" method="POST">
+            <a class="ml-auto mr-3" href="/posts/<%= post.id %>/edit">Edit</a>
+            <form action="/posts/<%= post.id %>?_method=DELETE" method="POST">
               <input type="submit" value="Delete">
             </form>
           </div>
