Create user migrations and add Users#new

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,9 @@
             <a class="nav-link" href="/posts">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+            <form class="form-inline" action="/users/new" method="GET">
+              <input class="btn btn-outline-primary" type="submit" value="Sign Up">
+            </form>
           </li>
         </ul>
       </div>
