--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,11 +21,17 @@
           <li class="nav-item">
             <a class="nav-link" href="/posts">Posts</a>
           </li>
-          <li class="nav-item">
-            <form class="form-inline" action="/users/new" method="GET">
-              <input class="btn btn-outline-primary" type="submit" value="Sign Up">
-            </form>
-          </li>
+          <% if (currentUser) { %>
+            <li class="nav-item">
+              <span class="navbar-text">Hi, <%= currentUser.username %>!</span>
+            </li>
+          <% } else { %>
+            <li class="nav-item">
+              <form class="form-inline" action="/users/new" method="GET">
+                <input class="btn btn-outline-primary" type="submit" value="Sign Up">
+              </form>
+            </li>
+          <% } %>
         </ul>
       </div>
     </nav>
