--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,8 +25,18 @@
             <li class="nav-item">
               <span class="navbar-text">Hi, <%= currentUser.username %>!</span>
             </li>
+            <li class="nav-item ml-2">
+              <form class="form-inline" action="/session?_method=DELETE" method="POST">
+                <input class="btn btn-outline-primary" type="submit" value="Sign Out">
+              </form>
+            </li>
           <% } else { %>
             <li class="nav-item">
+              <form class="form-inline" action="/session/new" method="GET">
+                <input class="btn btn-outline-primary" type="submit" value="Sign In">
+              </form>
+            </li>
+            <li class="nav-item ml-2">
               <form class="form-inline" action="/users/new" method="GET">
                 <input class="btn btn-outline-primary" type="submit" value="Sign Up">
               </form>
